Create frontend app

--- a/server/src/OrderTracking.API/appsettings.Development.json
+++ b/server/src/OrderTracking.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "Client": {
+    "Url": "http://localhost:5173"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ordertrackingdb;Username=admin;Password=admin"
   },
