--- a/server/src/OrderTracking.API/Properties/launchSettings.json
+++ b/server/src/OrderTracking.API/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "OrderTracking.Api": {
+    "OrderTracking.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
