Add message broker and real-time notification

--- a/server/src/OrderTracking.API/appsettings.Development.json
+++ b/server/src/OrderTracking.API/appsettings.Development.json
@@ -2,6 +2,11 @@
   "Client": {
     "Url": "http://localhost:5173"
   },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "order-status-tracking-group",
+    "Topic": "order-status-changed"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ordertrackingdb;Username=admin;Password=admin"
   },
